# Tremolo_DSP

./: CMakeLists.txt  README.md
Source/: LFO.cpp  LFO.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Sinewave.cpp  Sinewave.h  Square.cpp  Square.h
